...
  Button,
  Typography,
  Box,
  useTheme,
} from '@mui/material';
import AccessTimeIcon from '@mui/icons-material/AccessTime';
import LogoutIcon from '@mui/icons-material/Logout';
import WarningAmberIcon from '@mui/icons-material/WarningAmber';

interface TokenExpiredModalProps {
  open: boolean;
  onLogout: () => void;
}
...
